# draft-fastapi-todo-api

./: .dockerignore  .gcloudignore  Dockerfile  Makefile  alembic.ini  cloudbuild.yaml  compose.cloudsql.yaml  compose.yaml  pyproject.toml
.github/workflows/: unittest.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 202511292350_11e4c4841c14_initial_empty.py  202511300012_47a09671e222_add_initial_tables.py  202512180004_ef68524edda9_add_operations.py
app/: api_route.py  context.py  database.py  lifespan.py  log.py  main.py  middlewares.py  pager.py  settings.py
app/api/: __init__.py
app/api/operations/: schemas.py  use_cases.py  views.py
app/api/todos/: schemas.py  use_cases.py  views.py  webhook.py
app/api/todos/subtasks/: schemas.py  use_cases.py  views.py
app/db/: __init__.py  base.py  operation.py  subtask.py  todo.py
app/exceptions/: __init__.py  exceptions.py  handlers.py
app/models/: __init__.py  base.py  enums.py  operation.py  schemas.py  subtask.py  todo.py
app/tests/: conftest.py  test_main.py  test_middlewares.py
app/tests/api/: conftest.py
app/tests/api/todos/: test_use_cases.py  test_views.py
app/tests/exceptions/: test_handlers.py
app/tests/utils/: test_datetime.py
app/utils/: __init__.py  datetime.py
