[project]
name = "fastapi-todo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[postgresql-asyncpg]>=2.0.44",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 63

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
